--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,33 @@
-h1 {
-  color: blue;
+* {
+  padding: 0;
+  margin: 0;
 }
 
-/*# sourceMappingURL=app.css.map */
+.characters-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.characters-page-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(15, 200px);
+  height: 100%;
+  width: 90%;
+}
+
+section div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 1px black solid;
+}
+
+div img {
+  height: 90px;
+  width: 90px;
+}
+
+/*# sourceMappingURL=App.css.map */
