--- a/src/styles/_compare.scss
+++ b/src/styles/_compare.scss
@@ -53,3 +53,7 @@ table, th, tr, td {
   width: 7px;
   display: inline-block;
 }
+
+.highlight {
+  background-color: rgb(160, 160, 160) !important;
+}
