--- a/src/styles/_compare.scss
+++ b/src/styles/_compare.scss
@@ -18,16 +18,22 @@ table, th, tr, td {
 }
 
 .compare-header {
-  color: black;
+  color: rgb(255, 255, 255);
   font-family: 'Smash Bros', serrif;
+  text-align: center;
+}
+
+.table-container {
+  border: 10px solid $brillantBlue;
+  border-radius: 12px;
+  height: 600px;
+  overflow: scroll;
+  margin: 20px auto;
+  width: 90%;
 }
 
 .character-grid {
-  background-color: $subduedBlue;
-  border: 6px solid $purple;
-  border-radius: 25%;
-  margin: 20px auto;
-  width: 90%;
+  width: 100%;
   
   td {
     background-color: rgb(26, 26, 26);
@@ -42,7 +48,7 @@ table, th, tr, td {
 
   th {
     background-color: rgb(104, 104, 104);
-    border-bottom: 4px solid rgb(226, 225, 225);
+    border-bottom: 4px solid $brillantBlue;
     border-right:.5px solid rgb(128, 128, 128);
     color: white;
     padding: 0px 8px;
