--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,7 +16,7 @@ $purple: rgb(82, 26, 110);
   font-family: 'Smash Bros';
   font-style: normal;
   font-weight: 400;
-  src:  url('../fonts/smash_font.ttf') format('truetype'), 
+  src: url('../fonts/smash_font.ttf') format('truetype'), 
   url('../fonts/smash_font-webfont.woff') format('woff'), 
   url('../fonts/smash_font-webfont.woff2') format('woff2'); 
 }
@@ -31,7 +31,7 @@ body {
 }
 
 h1 {
-  color: blue;
+  color: white;
 }
 
 .header-button {
