added images, basic styling and layout for stages

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -37,22 +37,34 @@ table, th, tr, td {
   padding: 0px 8px;
 }
 
-.stages-header {
+h1 {
   color: black;
   font-family: "Smash Bros", serrif;
+  height: 65%;
+  width: 100%;
+}
+
+.stages-page {
+  margin-left: 65px;
 }
 
 .stage-cards {
   color: white;
   font-family: "Open Sans", sans-serif;
+  font-size: 8px;
 }
 
-.stages-page {
+.stages-body {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(15, 200px);
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(12, 200px);
   height: 100%;
-  width: 90%;
+  width: 95%;
+}
+
+.stage-image {
+  height: 150px;
+  width: 150px;
 }
 
 .landing-page {
@@ -118,22 +130,34 @@ h1 {
   z-index: 1;
 }
 
-.stages-header {
+h1 {
   color: black;
   font-family: "Smash Bros", serrif;
+  height: 65%;
+  width: 100%;
+}
+
+.stages-page {
+  margin-left: 65px;
 }
 
 .stage-cards {
   color: white;
   font-family: "Open Sans", sans-serif;
+  font-size: 8px;
 }
 
-.stages-cards {
+.stages-body {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(15, 200px);
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(12, 200px);
   height: 100%;
-  width: 90%;
+  width: 95%;
+}
+
+.stage-image {
+  height: 150px;
+  width: 150px;
 }
 
 /*# sourceMappingURL=App.css.map */
