--- a/src/styles/_stages.scss
+++ b/src/styles/_stages.scss
@@ -8,21 +8,33 @@ $purple: rgb(82, 26, 110);
 
 
 
-.stages-header {
+
+h1 {
   color: black;
   font-family: 'Smash Bros', serrif;
+  height: 65%;
+  width: 100%;
+}
+
+.stages-page {
+  margin-left: 65px;
 }
 
 .stage-cards {
   color: white;
   font-family: 'Open Sans', sans-serif;
+  font-size: 8px;
 }
 
-.stages-page {
+.stages-body {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(15, 200px);
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(12, 200px);
   height: 100%;
-  width: 90%;
+  width: 95%;
 }
 
+.stage-image {
+  height: 150px;
+  width: 150px;
+}
