--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -47,8 +47,6 @@ h1 {
   left: 68%;
 }
 
-
-
 .header {
   background-position:0 0, 12.5px 0, 12.5px -12.5px, 0px 12.5px;
   background-image:
@@ -67,26 +65,35 @@ h1 {
   z-index: 1;
 }
 
-.stages-header {
+h1 {
   color: black;
   font-family: 'Smash Bros', serrif;
+  height: 65%;
+  width: 100%;
 }
 
-.stages-body {
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
+.stages-page {
+  margin-left: 65px;
 }
 
 .stage-cards {
   color: white;
   font-family: 'Open Sans', sans-serif;
+  font-size: 8px;
 }
 
-.stages-cards {
+.stages-body {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(15, 200px);
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(12, 200px);
   height: 100%;
-  width: 90%;
+  width: 95%;
 }
+
+.stage-image {
+  height: 150px;
+  width: 150px;
+}
+
+
+
