--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,6 +26,21 @@ table, th, tr, td {
 .character-grid {
   width: 100%;
 }
+.character-grid tr:nth-child(1) th {
+  background-color: black;
+  border: 0.5px solid black;
+  border-top: 0px;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 10;
+}
+.character-grid tr:nth-child(1) th.sticky {
+  border-bottom: 4px solid #387fe7;
+}
+.character-grid tbody {
+  width: 100%;
+}
 .character-grid td {
   background-color: #1a1a1a;
   border: 0.5px solid black;
@@ -36,20 +51,31 @@ table, th, tr, td {
   background-color: #2e2e2e;
 }
 .character-grid th {
-  background-color: #686868;
-  border-bottom: 4px solid #387fe7;
-  border-right: 0.5px solid gray;
   color: white;
   padding: 0px 8px;
 }
+.character-grid th:hover {
+  color: #387fe7;
+  cursor: pointer;
+}
 
 .arrow {
-  width: 7px;
   display: inline-block;
+  fill: #387fe7 !important;
+  transition: transform 0.2s ease;
+  width: 7px;
 }
 
 .highlight {
   background-color: #a0a0a0 !important;
+}
+
+.rotate-down {
+  transform: rotate(180deg);
+}
+
+.icon-span {
+  margin-left: 7px;
 }
 
 .landing-page {
