--- a/src/styles/_compare.scss
+++ b/src/styles/_compare.scss
@@ -34,6 +34,24 @@ table, th, tr, td {
 
 .character-grid {
   width: 100%;
+
+  tr:nth-child(1) th {
+    background-color: rgb(0, 0, 0);
+    border: .5px solid black;
+    border-top: 0px;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    z-index: 10;
+
+    &.sticky {
+      border-bottom: 4px solid $brillantBlue;
+    }
+  }
+
+  tbody {
+    width: 100%;
+  }
   
   td {
     background-color: rgb(26, 26, 26);
@@ -47,19 +65,31 @@ table, th, tr, td {
   }
 
   th {
-    background-color: rgb(104, 104, 104);
-    border-bottom: 4px solid $brillantBlue;
-    border-right:.5px solid rgb(128, 128, 128);
     color: white;
     padding: 0px 8px;
+
+    &:hover {
+      color: $brillantBlue;
+      cursor: pointer;
+    }
   }
 }
 
 .arrow {
-  width: 7px;
   display: inline-block;
+  fill: $brillantBlue !important;
+  transition: transform .2s ease;
+  width: 7px;
 }
 
 .highlight {
   background-color: rgb(160, 160, 160) !important;
+}
+
+.rotate-down {
+  transform: rotate(180deg); 
+}
+
+.icon-span {
+  margin-left: 7px
 }
