--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,6 +26,18 @@ table, th, tr, td {
 .character-grid {
   width: 100%;
 }
+.character-grid tr:nth-child(1) th {
+  background-color: black;
+  border: 0.5px solid black;
+  border-top: 0px;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 10;
+}
+.character-grid tr:nth-child(1) th.sticky {
+  border-bottom: 4px solid #387fe7;
+}
 .character-grid tbody {
   width: 100%;
 }
@@ -39,25 +51,31 @@ table, th, tr, td {
   background-color: #2e2e2e;
 }
 .character-grid th {
-  background-color: #686868;
-  border-bottom: 4px solid #387fe7;
-  border-right: 0.5px solid gray;
   color: white;
   padding: 0px 8px;
 }
+.character-grid th:hover {
+  color: #387fe7;
+  cursor: pointer;
+}
 
 .arrow {
-  width: 7px;
   display: inline-block;
+  fill: #387fe7 !important;
+  transition: transform 0.2s ease;
+  width: 7px;
 }
 
 .highlight {
   background-color: #a0a0a0 !important;
 }
 
-.table-header {
-  position: fixed;
-  width: 100%;
+.rotate-down {
+  transform: rotate(180deg);
+}
+
+.icon-span {
+  margin-left: 7px;
 }
 
 .landing-page {
@@ -80,11 +98,14 @@ table, th, tr, td {
 }
 .action-container button {
   border: 0px;
-  background: #9db3f9;
+  background: none;
   font-family: "Smash Bros", serrif;
   font-size: 2em;
   margin: 20px calc(50vw - 100px);
   width: 200px;
+}
+.action-container button:hover {
+  color: white;
 }
 
 .hide {
