--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -71,7 +71,7 @@ table, th, tr, td {
 }
 
 .rotate-down {
-  transform: rotate(180deg);
+  transform: rotate(90deg);
 }
 
 .icon-span {
@@ -94,6 +94,7 @@ table, th, tr, td {
 }
 .action-container img {
   margin: 20px calc(50vw - 305px);
+  height: 290px;
   width: 600px;
 }
 .action-container button {
