--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -14,7 +14,7 @@ $subduedBlue: rgb(157, 179, 249);
 .action-container {
   width: 100%;
   
-  img {
+    .smash-logo {
     margin: 20px calc(50vw - 305px);
     height: 290px;
     width: 600px;
