--- a/src/styles/_characters.scss
+++ b/src/styles/_characters.scss
@@ -1,12 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-}
-
-.characters-page {
-  display: flex;
-  justify-content: center;
-}
+} 
 
 .characters-page {
   display: grid;
@@ -24,7 +19,7 @@
 
 }
 
-div img {
+.character-preview-icon {
   height: 100px;
   width: 100px;
 }
