--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -40,13 +40,16 @@ table, th, tr, td {
 .compare-header {
   color: white;
   font-family: "Smash Bros", serrif;
+  font-size: 2.5em;
+  margin: 30px;
   text-align: center;
 }
 
 .table-container {
   border: 10px solid #387fe7;
   border-radius: 12px;
-  height: 70VH;
+  height: 75VH;
+  min-height: 400px;
   overflow: scroll;
   margin: 20px auto;
   width: 90%;
@@ -170,10 +173,6 @@ h1 {
 
 .hide {
   display: none;
-}
-
-img {
-  z-index: 12;
 }
 
 @font-face {
