styling updates to stages component

--- a/src/styles/_stages.scss
+++ b/src/styles/_stages.scss
@@ -7,10 +7,8 @@ $deepRed: rgb(107, 17, 10);
 $purple: rgb(82, 26, 110);
 
 
-
-
-h1 {
-  color: black;
+.stages-header {
+  color: blue;
   font-family: 'Smash Bros', serrif;
   height: 65%;
   width: 100%;
