--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,3 @@
-
 * {
   padding: 0;
   margin: 0;
@@ -109,17 +108,8 @@ table, th, tr, td {
   margin-left: 7px;
 }
 
-.arrow {
-  width: 7px;
-  display: inline-block;
-}
-
-.highlight {
-  background-color: #a0a0a0 !important;
-}
-
-h1 {
-  color: black;
+.stages-header {
+  color: blue;
   font-family: "Smash Bros", serrif;
   height: 65%;
   width: 100%;
@@ -188,13 +178,12 @@ h1 {
   font-weight: 400;
   src: url("../fonts/smash_font.ttf") format("truetype"), url("../fonts/smash_font-webfont.woff") format("woff"), url("../fonts/smash_font-webfont.woff2") format("woff2");
 }
-
 body {
   background-image: url("../images/night_battlefield.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-color: #403142;
+  background-color: #b8e0f7;
   background-blend-mode: overlay;
 }
 
@@ -234,38 +223,6 @@ h1 {
   color: white;
 }
 
-* {
-  padding: 0;
-  margin: 0;
-}
-
-.characters-page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.characters-page-grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(15, 200px);
-  height: 100%;
-  width: 90%;
-}
-
-section div {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  border: 1px black solid;
-}
-
-div img {
-  height: 90px;
-  width: 90px;
-}
-
 .header-button {
   background: transparent;
   border: none;
@@ -293,36 +250,6 @@ div img {
   position: absolute;
   width: 85px;
   z-index: 1;
-}
-
-h1 {
-  color: black;
-  font-family: "Smash Bros", serrif;
-  height: 65%;
-  width: 100%;
-}
-
-.stages-page {
-  margin-left: 65px;
-}
-
-.stage-cards {
-  color: white;
-  font-family: "Open Sans", sans-serif;
-  font-size: 8px;
-}
-
-.stages-body {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(12, 200px);
-  height: 100%;
-  width: 95%;
-}
-
-.stage-image {
-  height: 150px;
-  width: 150px;
 }
 
 /*# sourceMappingURL=App.css.map */
