--- a/src/styles/_compare.scss
+++ b/src/styles/_compare.scss
@@ -1,11 +1,4 @@
-$fireOrange: rgb(245, 88, 33);
-$lightOrange: rgb(249, 212, 174);
-$deepBlue: rgb(0, 28, 156);
-$brillantBlue: rgb(56, 127 ,231);
-$subduedBlue: rgb(157, 179, 249);
-$deepRed: rgb(107, 17, 10);
-$purple: rgb(82, 26, 110);
-
+@import 'variables';
 
 table, th, tr, td {
   font-family: 'Open Sans', sans-serif;
@@ -36,6 +29,7 @@ table, th, tr, td {
 }
 
 .character-grid {
+  background-color: black;
   width: 100%;
 
   tr:nth-child(1) th {
