--- a/src/styles/_stages.scss
+++ b/src/styles/_stages.scss
@@ -1,10 +1,4 @@
-$fireOrange: rgb(245, 88, 33);
-$lightOrange: rgb(249, 212, 174);
-$deepBlue: rgb(0, 28, 156);
-$brillantBlue: rgb(56, 127 ,231);
-$subduedBlue: rgb(157, 179, 249);
-$deepRed: rgb(107, 17, 10);
-$purple: rgb(82, 26, 110);
+@import 'variables';
 
 
 .stages-header {
