--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -9,6 +9,7 @@
   top: 0;
   right: 0;
   z-index: 3;
+  overflow: hidden;
 }
 
 .action-container {
@@ -49,78 +50,86 @@
 }
 
 .cloud1 {
-  @include cloud(97s, -700px, 40px, 400px);
+  @include cloud(147s, -700px, 40px, 400px);
 }
 
 .cloud2 {
-  @include cloud(100s, -1000px, 570px, 400px);
+  @include cloud(150s, -1000px, 570px, 400px);
 }
 
 .cloud3 {
-  @include cloud(103s, -300px, 540px, 400px);
+  @include cloud(153s, -300px, 540px, 400px);
 }
 
 .cloud4 {
-  @include cloud(107s, -200px, 70px, 400px);
+  @include cloud(157s, -200px, 70px, 400px);
   height: 200px;
 }
 
 .cloud5 {
-  @include cloud(116s, -600px, 350px, 200px);
+  @include cloud(166s, -600px, 350px, 200px);
 }
 
 .cloud6 {
-  @include cloud(101s, -1050px, 280px, 400px);
+  @include cloud(141s, -1050px, 280px, 400px);
 }
 
 .cloud7 {
-  @include cloud(112s, 100px, 300px, 400px);
+  @include cloud(162s, 100px, 300px, 400px);
 }
 
 .cloud8 {
-  @include cloud(138s, -1300px, -20px, 500px);
+  @include cloud(188s, -1300px, -20px, 500px);
   height: 300px
 }
 
 .cloud9 {
-  @include cloud(97s, 500px, 40px, 400px);
+  @include cloud(147s, 500px, 40px, 400px);
 }
 
 .cloud10 {
-  @include cloud(100s, 200px, 570px, 400px);
+  @include cloud(150s, 200px, 570px, 400px);
 }
 
 .cloud11 {
-  @include cloud(103s, 900px, 540px, 400px);
+  @include cloud(153s, 900px, 540px, 400px);
 }
 
 .cloud12 {
-  @include cloud(107s, 1000px, 70px, 400px);
+  @include cloud(157s, 1000px, 70px, 400px);
   height: 200px;
 }
 
 .cloud13 {
-  @include cloud(116s, 600px, 350px, 200px);
+  @include cloud(166s, 600px, 350px, 200px);
 }
 
 .cloud14 {
-  @include cloud(101s, 150px, 280px, 400px);
+  @include cloud(151s, 150px, 280px, 400px);
 }
 
 .cloud15 {
-  @include cloud(112s, 1300px, 300px, 400px);
+  @include cloud(172s, 1300px, 300px, 400px);
 }
 
 .cloud16 {
-  @include cloud(138s, -100px, -20px, 500px);
+  @include cloud(188s, -100px, -20px, 500px);
   height: 300px
 }
 
 @keyframes cloudMove {
-  from {
+  0% {
     transform: translateX(1200px);
   }
-  to {
-    transform: translateX(0px)
+  50% {
+    transform: translateX(0px);
+    display: none;
+  }
+  51% {
+    transform: translateX(2400px);
+    display: block;
+  }
+  100% {
+    transform: translateX(1200px);
   }
 }
