Refactor Cloud generation. Add transition animations

--- a/src/styles/_compare.scss
+++ b/src/styles/_compare.scss
@@ -2,6 +2,7 @@
 
 .compare-page {
   animation: zoomIn .8s ease;
+  transition: all .5s
 
   table, th, tr, td {
     font-family: 'Open Sans', sans-serif;
