--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300, 300i,400,500i,700');
+
 $fireOrange: rgb(245, 88, 33);
 $lightOrange: rgb(249, 212, 174);
 $deepBlue: rgb(0, 28, 156);
