--- a/src/styles/_characterInfoCard.scss
+++ b/src/styles/_characterInfoCard.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 
 .character-info-card {
+  animation: fadeIn 1s;
   background-color: #272B3E;
   border-radius: 15px;
   color: white;
@@ -50,9 +51,10 @@
     border: 3px solid white;
     border-radius: 50%;
     color: white;
-    font-size: 3.3em;
+    font-size: 3.2em;
+    font-family: 'Rye', cursive;
     margin-left: 16px;
-    padding: 4px 14px 12px;
+    padding: 4px 20px 12px;
   }
 
   .main-card-content {
@@ -75,7 +77,7 @@
   .card-middle-tier-container {
     display: flex;
     justify-content: space-around;
-    margin: 10px -40px 0px 0px;
+    margin: 10px -25px 0px 0px;
 
     .character-stats-div {
       flex-grow: 1;
@@ -86,17 +88,26 @@
     .card-value {
       font-weight: 300;
       font-style: italic;
-      font-size: 3.2em;
+      font-size: 2em;
       padding-right: -50px;
       text-shadow: 1px 2px black;
       width: 158px;
       margin: 0 auto;
+  
     }
 
+    .super-script {
+      font-size: .5em;
+      position: relative;
+      bottom: 22px;
+      left: 5px;
+    }
+    
     .card-class-value {
       font-size: 1.7em;
     }
   }
+
 
   .card-image {
     height: 400px;
@@ -113,6 +124,10 @@
   .pro-con-container {
     display: flex;
     margin: 20px 0px;
+
+    .card-label{
+      margin-left: 5px;
+    }
   }
 
   .stat-container {
@@ -179,7 +194,7 @@
   }
 
   .right-button {
-    top: 695px;
+    top: 670px;
     right: 450px;
 
     i {
@@ -194,7 +209,7 @@
   }
 
   .left-button {
-    top: 695px;
+    top: 670px;
     left: 450px;
 
     i {
@@ -265,5 +280,14 @@
 
 #N\/A {
   color: rgb(126, 124, 124);
-  border-color: rgb(105, 102, 103);
+  border: none;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
