--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300, 300i,400,500i,700');
+@import url('https://fonts.googleapis.com/css?family=Rye');
 
 $fireOrange: rgb(245, 88, 33);
 $lightOrange: rgb(249, 212, 174);
