Restyle preview cards

--- a/src/styles/_characterInfoCard.scss
+++ b/src/styles/_characterInfoCard.scss
@@ -53,8 +53,8 @@
     color: white;
     font-size: 3.2em;
     font-family: 'Rye', cursive;
-    margin-left: 16px;
-    padding: 4px 20px 12px;
+    margin-left: 14px;
+    padding: 4px 20px 12px 17px;
   }
 
   .main-card-content {
