Add filter function on characters page

--- a/src/styles/_characters.scss
+++ b/src/styles/_characters.scss
@@ -2,7 +2,7 @@
 
 
 
-.characters-page {
+.characters-grid {
   justify-content: center;
 }
 
@@ -11,7 +11,7 @@
   margin: 0;
 }
 
-.characters-page {
+.characters-grid {
   margin: 50px 20px;
   animation: zoomIn .8s ease;
   display: grid;
