--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -26,7 +26,9 @@
       font-family: 'Smash Bros', serrif;
       font-size: 2em;
       margin: 20px calc(50vw - 100px);
+      position: relative;
       width: 200px;
+      z-index: 5;
 
       &:hover {
         color: white;
