--- a/src/styles/_compare.scss
+++ b/src/styles/_compare.scss
@@ -14,21 +14,13 @@
     width: 60px;
   }
 
-  .compare-header {
-    color: rgb(255, 255, 255);
-    font-family: 'Smash Bros', serrif;
-    font-size: 2.5em;
-    margin: 30px;
-    text-align: center;
-  }
-
   .table-container {
     border: 10px solid $brillantBlue;
     border-radius: 12px;
-    height: 75VH;
+    height: 80VH;
     min-height: 400px;
     overflow: scroll;
-    margin: 20px auto;
+    margin: 40px auto;
     width: 90%;
   }
 
@@ -37,8 +29,8 @@
     width: 100%;
 
     tr:nth-child(1) th {
-      background-color: rgb(0, 0, 0);
-      border: .5px solid black;
+      background-color: black;
+      border: 0.5px solid black;
       border-top: 0px;
       position: sticky;
       position: -webkit-sticky;
