--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -58,32 +58,8 @@ h1 {
   z-index: 1;
 }
 
-h1 {
-  font-family: 'Smash Bros', serrif;
-  height: 65%;
-  width: 100%;
-}
-
-.stages-page {
-  margin-left: 65px;
-}
-
 .stage-cards {
-  color: white;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 8px;
+  margin: 20px 30px 20px 30px;
 }
 
-.stages-body {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(12, 200px);
-  height: 100%;
-  width: 95%;
-}
-
-.stage-image {
-  height: 150px;
-  width: 150px;
-}
 
