slow down the clouds

--- a/src/styles/_characterInfoCard.scss
+++ b/src/styles/_characterInfoCard.scss
@@ -134,7 +134,7 @@
     text-align: center;
     height: 150px;
     width: 250px;
-    overflow: hidden;
+    overflow: scroll;
 
     p {
       font-weight: 300;
