--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @import 'header';
 @import 'variables';
 @import 'characterInfoCard';
+@import 'stageCard';
 
 body {
   background-image: url('../images/night_battlefield.jpg');
