--- a/src/styles/_characters.scss
+++ b/src/styles/_characters.scss
@@ -43,6 +43,7 @@
   // background-blend-mode: darken;
 .preview-card-name {
   background-color: black;
+  background-image: url('../images/mosaic.png');
   color: white;
   text-align: center;
   padding: 12px;
