--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -160,7 +160,6 @@
 .stages-header {
   color: blue;
   font-family: "Smash Bros", serrif;
-  height: 65%;
   width: 100%;
 }
 
@@ -517,7 +516,7 @@ h1 {
 h1 {
   color: blue;
   font-family: 'Smash Bros', serrif;
-  height: 26%;
+  /*height: 26%;*/
   width: 100%;
   text-align: center;
 }
