--- a/src/styles/_stages.scss
+++ b/src/styles/_stages.scss
@@ -43,7 +43,8 @@
   display: grid;
   grid-gap: 20px;
   grid-template-columns: repeat(auto-fit, 200px);
-  margin: 150px 30px 150px 63px;
+  margin-top: 150px;
+  justify-content: center;
 }
 
 .stage-image {
