--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -27,6 +27,7 @@
       font-size: 2em;
       margin: 20px calc(50vw - 100px);
       position: relative;
+      text-shadow: 3px 3px 3px white;
       width: 200px;
       z-index: 5;
 
