--- a/src/styles/_characterInfoCard.scss
+++ b/src/styles/_characterInfoCard.scss
@@ -11,6 +11,7 @@
   top: 140px;
   padding: 10px;
   width: 900px;
+  z-index: 5;
   
   .card {
     font-family: 'Roboto', sans-serif;
@@ -44,7 +45,6 @@
   .card-tier-label {
     font-weight: 300;
     font-size: 2em;
-
   }
 
   .card-tier {
@@ -54,7 +54,7 @@
     font-size: 3.2em;
     font-family: 'Rye', cursive;
     margin-left: 14px;
-    padding: 3px 20px 12px 17px;
+    padding: 3px 20px 5px 17px;
   }
 
   .main-card-content {
@@ -107,7 +107,6 @@
       font-size: 1.7em;
     }
   }
-
 
   .card-image {
     height: 400px;
@@ -172,8 +171,8 @@
   padding: 10px;
   height: 2000px;
   width: 2000px;
-
   position: fixed;
+  z-index: 2;
 
   .scroll-button {
     border-radius: 50%;
